--- a/force-app/main/default/translations/ru.translation-meta.xml
+++ b/force-app/main/default/translations/ru.translation-meta.xml
@@ -285,6 +285,10 @@
         <name>BTN_Yes_decline</name>
     </customLabels>
     <customLabels>
+        <label>Удалить</label>
+        <name>Button_Remove</name>
+    </customLabels>
+    <customLabels>
         <label>Просмотреть в роли клиники</label>
         <name>CTL_L_HCP_MODE</name>
     </customLabels>
@@ -623,7 +627,6 @@
         <name>Email_Body_Patient14</name>
     </customLabels>
     <customLabels>
-<<<<<<< HEAD
         <label>Недавно ##HCPName сделал от вашего имени направление в ##PIName для потенциального участия в клиническом
             исследовании: ##StudyName.
              
@@ -633,8 +636,6 @@
             Чтобы просмотреть дополнительную информацию об этом исследовании, войдите на платформу и перейдите в раздел
             «Мои исследования».
         </label>
-=======
-        <label><!-- Email_Body_Patient15 --></label>
         <name>Email_Body_Patient15</name>
     </customLabels>
     <customLabels>
@@ -643,7 +644,6 @@
 С вами свяжется сайт главного исследователя ##StudySiteName, чтобы узнать о следующих шагах в процессе регистрации.
  
 Чтобы просмотреть дополнительную информацию об этом исследовании, войдите на платформу и перейдите в раздел «Мои исследования».</label>
->>>>>>> origin/PH_R1_Sprint3_M_LB_PEH-39
         <name>Email_Body_Patient2</name>
     </customLabels>
     <customLabels>
@@ -3508,4 +3508,135 @@
         <label><!-- URL Interactive Advertising Bureau --></label>
         <name>URL_Interactive_Advertising_Bureau</name>
     </customLabels>
+    <customTabs>
+        <label><!-- Manual Tasks Creation --></label>
+        <name>Manual_Tasks_Creation</name>
+    </customTabs>
+    <customTabs>
+        <label><!-- Study Export/Import --></label>
+        <name>Translation_Import_Export</name>
+    </customTabs>
+    <flowDefinitions>
+        <flows>
+            <fullName>Update_Site_RRR_Status-1</fullName>
+        </flows>
+        <fullName>Update_Site_RRR_Status</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Welcome_to_the_Study_Caregiver_Alert-1</fullName>
+        </flows>
+        <fullName>Welcome_to_the_Study_Caregiver_Alert</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Task_changes_status_to_Expired-1</fullName>
+        </flows>
+        <fullName>Task_changes_status_to_Expired</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Update_HCP_Status-1</fullName>
+        </flows>
+        <fullName>Update_HCP_Status</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Fill_Unique_Id_for_Terms_And_Conditions-1</fullName>
+        </flows>
+        <fullName>Fill_Unique_Id_for_Terms_And_Conditions</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>PSE_Creation-1</fullName>
+        </flows>
+        <flows>
+            <fullName>PSE_Creation-2</fullName>
+        </flows>
+        <fullName>PSE_Creation</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Create_Therapeutic_Area_Patient_from_PE-1</fullName>
+        </flows>
+        <flows>
+            <fullName>Create_Therapeutic_Area_Patient_from_PE-2</fullName>
+        </flows>
+        <fullName>Create_Therapeutic_Area_Patient_from_PE</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Create_Therapeutic_Area_Patient_from_PSE-1</fullName>
+        </flows>
+        <fullName>Create_Therapeutic_Area_Patient_from_PSE</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Patient_Welcome_to_the_Study_Email-1</fullName>
+        </flows>
+        <fullName>Patient_Welcome_to_the_Study_Email</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Welcome_to_the_Study_Patient_Delegate_Alert-1</fullName>
+        </flows>
+        <fullName>Welcome_to_the_Study_Patient_Delegate_Alert</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows>
+            <fullName>Alert_Welcome_to_the_Study_creation-1</fullName>
+        </flows>
+        <flows>
+            <fullName>Alert_Welcome_to_the_Study_creation-2</fullName>
+        </flows>
+        <fullName>Alert_Welcome_to_the_Study_creation</fullName>
+    </flowDefinitions>
+    <quickActions>
+        <label><!-- Follow Up --></label>
+        <name>Follow_Up</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- LogACall --></label>
+        <name>LogACall</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewAccount --></label>
+        <name>NewAccount</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewCase --></label>
+        <name>NewCase</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewContact --></label>
+        <name>NewContact</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewEvent --></label>
+        <name>NewEvent</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewGroup --></label>
+        <name>NewGroup</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewLead --></label>
+        <name>NewLead</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewNote --></label>
+        <name>NewNote</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewOpportunity --></label>
+        <name>NewOpportunity</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- NewTask --></label>
+        <name>NewTask</name>
+    </quickActions>
+    <quickActions>
+        <label><!-- SendEmail --></label>
+        <name>SendEmail</name>
+    </quickActions>
 </Translations>
