--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -14,6 +14,7 @@ public class ParticipantService {
         
         public ParticipantState(){
             value = ParticipantStates.PROSPECT;
+            isDelegate = false;
         }
     }
     
